--- a/public/css/stylish-portfolio.css
+++ b/public/css/stylish-portfolio.css
@@ -111,7 +111,7 @@ body {
   height: 100%;
   width: 100%;
   position: relative;
-  background: url(../img/bg.jpg) no-repeat center center fixed; 
+  background: url(../img/bg2.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -122,6 +122,7 @@ body {
 
 .intro {
   padding: 50px 0;
+  height: 600px;
 }
 
 /* Services */
