design and validations routes

--- a/public/css/stylish-portfolio.css
+++ b/public/css/stylish-portfolio.css
@@ -111,13 +111,20 @@ body {
   height: 100%;
   width: 100%;
   position: relative;
-  background: url(../img/bg2.jpg) no-repeat center center fixed; 
+  /*background: url(../img/bg2.jpg) no-repeat center center fixed; */
+  background-color: #b84d45;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
 
+.header2 {
+  display: table;
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
 /* Intro */
 
 .intro {
